Added missing imports required for Media package
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@102 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -25,6 +25,9 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.media;\
  javax.media.format;\
  javax.media.protocol;\
+ javax.sound.sampled;\
+ com.sun.media.protocol.javasound;\
+ com.sun.media.protocol.v4l;\
  net.java.stun4j;\
  net.java.stun4j.client;\
  net.java.stun4j.StunAddress;\
@@ -42,6 +45,7 @@ oscar.auto.start.2= \
 oscar.auto.start.3= \
  file:sc-bundles/configuration.jar \
  file:sc-bundles/media.jar \
+ file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/netaddr.jar
 
 oscar.auto.start.4= \
