swing-ui.jar added at the end
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@130 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -44,7 +44,6 @@ oscar.auto.start.2= \
 
 oscar.auto.start.3= \
  file:sc-bundles/configuration.jar \
- file:sc-bundles/swing-ui.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/netaddr.jar
@@ -52,6 +51,9 @@ oscar.auto.start.3= \
 oscar.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar
+ 
+ oscar.auto.start.99= \
+ file:sc-bundles/swing-ui.jar
 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
