Tweaking the swing-ui bundle
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@140 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -2,35 +2,37 @@
 # Framework config properties.
 #
 org.osgi.framework.system.packages= org.osgi.framework; \
- javax.swing;\
- javax.swing.event;\
- javax.swing.table;\
+ javax.swing; \
+ javax.swing.event; \
+ javax.swing.table; \
  javax.swing.text; \
  javax.accessibility; \
  javax.swing.plaf; \
+ javax.swing.plaf.metal; \
+ javax.swing.plaf.basic; \
  javax.swing.tree; \
  javax.swing.undo; \
  javax.swing.event; \
  javax.swing.border; \
- org.w3c.dom;\
- org.xml.sax;\
+ org.w3c.dom; \
+ org.xml.sax; \
  javax.xml.parsers;\
  org.jaxen; \
  org.jaxen.dom; \
  org.jaxen.saxpath; \
- org.apache.xml.serializer;\
- javax.xml.transform;\
- javax.xml.transform.dom;\
- javax.xml.transform.stream;\
- javax.media;\
- javax.media.format;\
- javax.media.protocol;\
- javax.sound.sampled;\
- com.sun.media.protocol.javasound;\
- com.sun.media.protocol.v4l;\
- net.java.stun4j;\
- net.java.stun4j.client;\
- net.java.stun4j.StunAddress;\
+ org.apache.xml.serializer; \
+ javax.xml.transform; \
+ javax.xml.transform.dom; \
+ javax.xml.transform.stream; \
+ javax.media; \
+ javax.media.format; \
+ javax.media.protocol; \
+ javax.sound.sampled; \
+ com.sun.media.protocol.javasound; \
+ com.sun.media.protocol.v4l; \
+ net.java.stun4j; \
+ net.java.stun4j.client; \
+ net.java.stun4j.StunAddress; \
  net.java.stun4j.StunException;
 
 oscar.auto.start.1= \
@@ -51,7 +53,7 @@ oscar.auto.start.3= \
 oscar.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar
- 
+
  oscar.auto.start.99= \
  file:sc-bundles/swing-ui.jar
 
