added an extra swing to the system packages (needed by swing-ui.jar)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@146 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -10,6 +10,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.plaf; \
  javax.swing.plaf.metal; \
  javax.swing.plaf.basic; \
+ javax.imageio; \
  javax.swing.tree; \
  javax.swing.undo; \
  javax.swing.event; \
