bundle swing ui description removed
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@150 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -609,8 +609,7 @@ javax.swing.event, javax.swing.border"/>
     </target>
 
 	 <!-- BUNDLE-SWING-UI -->
-    <target name="bundle-swing-ui" depends="rebuild"
-        description="Creates a bundle containing the implementation of the ui service.">
+    <target name="bundle-swing-ui" depends="rebuild">
         <jar compress="false" destfile="${bundles.dest}/swing-ui.jar"
             manifest="src/net/java/sip/communicator/impl/gui/swing.ui.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/service/gui"
