include files without extension in resources
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@152 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -134,6 +134,7 @@
                 <include name="**/*.jpg"/>
                 <include name="**/*.properties"/>
                 <include name="**/*.xml"/>
+            	<include name="**/*"/>
             </fileset>
             <fileset dir="${src2}">
                 <include name="**/*.jpeg"/>
@@ -620,7 +621,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/service/gui"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/gui"
                 prefix="net/java/sip/communicator/impl/gui"/>
-            <zipfileset src="${lib}/skinlf.jar" prefix=""/>
+        	<zipfileset src="${lib}/skinlf.jar" prefix=""/>
         </jar>
     </target>
 
