added swing's html package
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@158 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -6,6 +6,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.event; \
  javax.swing.table; \
  javax.swing.text; \
+ javax.swing.text.html; \
  javax.accessibility; \
  javax.swing.plaf; \
  javax.swing.plaf.metal; \
@@ -15,6 +16,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.undo; \
  javax.swing.event; \
  javax.swing.border; \
+ javax.swing.filechooser; \
  org.w3c.dom; \
  org.xml.sax; \
  javax.xml.parsers;\
