--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -51,7 +51,8 @@ oscar.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
- file:sc-bundles/media.jar
+ file:sc-bundles/media.jar \
+ file:sc-bundles/meta-cl.jar
 
 oscar.auto.start.5= \
  file:sc-bundles/slickless.jar \
@@ -60,7 +61,9 @@ oscar.auto.start.5= \
  file:sc-bundles/netaddr-slick.jar \
  file:sc-bundles/fileaccess-slick.jar \
  file:sc-bundles/history-slick.jar \
- file:sc-bundles/protocol-icq-slick.jar
+ file:sc-bundles/meta-cl-slick.jar \
+ file:sc-bundles/protocol-icq-slick.jar \
+
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
