--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -9,4 +9,5 @@ test.list=ConfigurationServiceLick \
  FileAccessServiceLick \
  HistoryServiceLick \
  SlicklessTests \
- IcqProtocolProviderSlick
+ IcqProtocolProviderSlick \
+ MetaContactListServiceLick
