--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -62,7 +62,7 @@ oscar.auto.start.5= \
  file:sc-bundles/fileaccess-slick.jar \
  file:sc-bundles/history-slick.jar \
  file:sc-bundles/meta-cl-slick.jar \
- file:sc-bundles/protocol-icq-slick.jar \
+ file:sc-bundles/protocol-icq-slick.jar
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
