Ongoing works on the MetaContactList and its SLICK
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@195 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -26,7 +26,7 @@ handlers= java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= FINE
+.level= INFO
 
 ############################################################
 # Handler specific properties.
@@ -52,9 +52,8 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 # We don't want trace logs from joscar and joustsim
 net.kano.level = INFO
 # But we want everything coming from the sip-comm
-net.java.sip.communicator.service.protocol.level = FINEST
-net.java.sip.communicatserverStoredGroupListenersor.impl.protocol.level = FINEST
-net.java.sip.communicator.slick.protocol.level = FINEST
+net.java.sip.communicator.impl.level = FINEST
+net.java.sip.communicator.slick.level = FINEST
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
