added the meta contact list to the default installed bundles
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@198 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -45,7 +45,8 @@ oscar.auto.start.3= \
  file:sc-bundles/configuration.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/protocol-icq.jar \
- file:sc-bundles/netaddr.jar
+ file:sc-bundles/netaddr.jar \
+ file:sc-bundles/meta-cl.jar
 
 oscar.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
