--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="lib" path="lib/nist-sdp-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/nist-sip-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/skinlf.jar"/>
-	<classpathentry kind="lib" path="lib/oscar.jar"/>
+	<classpathentry sourcepath="/opt/oscar/src.jar" kind="lib" path="lib/oscar.jar"/>
 	<classpathentry kind="lib" path="lib/osgi.jar"/>
 	<classpathentry kind="lib" path="lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/moduleloader.jar"/>
@@ -18,5 +18,11 @@
 	<classpathentry kind="lib" path="lib/jmf-lin/jmf.jar"/>
 	<classpathentry kind="lib" path="lib/jmf-sol/jmf.jar"/>
 	<classpathentry kind="lib" path="lib/jmf-win/jmf.jar"/>
+	<classpathentry kind="lib" path="lib/architectureviewer1.1.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk14-130.jar"/>
+	<classpathentry kind="lib" path="lib/joscar-0.9.4-cvs-bin.jar"/>
+	<classpathentry kind="lib" path="lib/oscar-aim.jar"/>
+	<classpathentry kind="lib" path="lib/retroweaver.jar"/>
+	<classpathentry kind="lib" path="lib/retroweaver-rt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
