--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -3,19 +3,11 @@
 
 
 # A list of all tests that should be run by the test target of the project.
-#test.list=ConfigurationServiceLick \
-# MediaServiceLick \
-# NetworkAddressManagerServiceLick \
-# FileAccessServiceLick \
-# HistoryServiceLick \
-# SlicklessTests \
-# IcqProtocolProviderSlick \
-# MetaContactListServiceLick
-
 test.list=ConfigurationServiceLick \
  MediaServiceLick \
  NetworkAddressManagerServiceLick \
  FileAccessServiceLick \
  HistoryServiceLick \
  SlicklessTests \
+ IcqProtocolProviderSlick \
  MetaContactListServiceLick
