Mistakenly commited previous version
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@306 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -61,9 +61,8 @@ oscar.auto.start.5= \
  file:sc-bundles/netaddr-slick.jar \
  file:sc-bundles/fileaccess-slick.jar \
  file:sc-bundles/history-slick.jar \
+ file:sc-bundles/protocol-icq-slick.jar \
  file:sc-bundles/meta-cl-slick.jar
-
-# file:sc-bundles/protocol-icq-slick.jar \
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
