css files added to copied resourced
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@360 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -135,8 +135,9 @@
                 <include name="**/*.jpg"/>
                 <include name="**/*.properties"/>
                 <include name="**/*.xml"/>
-                <include name="**/*.themerc"/>
+                <include name="**/*.themerc"/>            	
                 <include name="**/gtkrc"/>
+            	<include name="**/*.css"/>
             </fileset>
             <fileset dir="${src2}">
                 <include name="**/*.jpeg"/>
