--- a/build.xml
+++ b/build.xml
@@ -117,7 +117,8 @@
         </delete>
     </target>
 
-    <!-- internal target - removes the OSGI repositories, so that next run recreates them -->
+    <!-- internal target - removes the OSGI repositories, so that next run
+         recreates them -->
     <target name="clean-bundle-repositories">
         <delete failonerror="false" includeemptydirs="true">
             <fileset dir="${bin}"/>
