Removed the unnecessary run dependency reported by Brian.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@422 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -319,7 +319,7 @@
     </target>
 
     <!--RUN-SIP-COMMUNICATOR-->
-    <target name="run" depends="compile,resource"
+    <target name="run" 
         description="Starts oscar and runs sip-comunicator gui.">
 
         <java classname="org.ungoverned.oscar.Main"
