MessageHistoryService implementation. Messages are now stored, but momentary cannot be read.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@481 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -50,7 +50,9 @@ oscar.auto.start.3= \
 
 oscar.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
- file:sc-bundles/history.jar
+ file:sc-bundles/history.jar \
+ file:sc-bundles/msghistory.jar
+ 
 
  oscar.auto.start.99= \
  file:sc-bundles/swing-ui.jar
